--- a/index.html
+++ b/index.html
@@ -1,42 +1,49 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Schedules</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+  <head>
+    <title>Schedules</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-    </head>
+    <!-- Bootstrap CSS (optional, used only for layout spacing) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
 
-    <body>
-        <header>
-            <!-- place navbar here -->
-        </header>
-        <main></main>
-        <footer>
-            <!-- place footer here -->
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+    <!-- Custom Styles -->
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/wta0qyp.css">
+
+  </head>
+
+  <body class="text-center p-4">
+    <h1>See All Your Friends’ Schedules!</h1>
+
+    <!-- Dropdown for selecting friends -->
+    <div class="dropdown mt-3">
+      <button class="dropbtn">Friends</button>
+      <div class="dropdown-content">
+        <a data-file="alyson.json">Alyson</a>
+        <a data-file="chris.json">Chris</a>
+        <a data-file="lexi.json">Lexi</a>
+        <a data-file="yasmina.json">Yasmina</a>
+      </div>
+    </div>
+
+    <!-- Displays the selected friend's name -->
+    <h3 id="friend-name"></h3>
+
+    <!-- Displays the class schedule cards -->
+    <div id="json-display" class="container mt-4"></div>
+
+    <!-- Link to JavaScript -->
+    <script src="script.js"></script>
+  </body>
 </html>
